# fastapi-boilerplate

./: .env.example  .env_example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/workflows/: codecov.yml
backend/: .coverage  Dockerfile  README.md  celerybeat-schedule  coverage.xml  mypy.ini  pyproject.toml
backend/app/: auth_handler.py  exceptions.py  logging_config.json  main.py  observability.py  requirements.txt
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: auth.py  core.py  example.py  tasks.py
backend/app/crud/: base.py
backend/app/db/: database.py
backend/app/models/: __init__.py  auth.py  core.py
backend/app/schemas/: __init__.py  auth.py  base.py  core.py
backend/app/tasks/: health_check.py
backend/app/tests/: conftest.py
backend/app/tests/api/: auth.py  core.py  example.py
backend/app/utils/: auth.py  exceptions.py  observability.py  worker.py
backend/etc/dashboards/: fastapi-observability.json
backend/etc/prometheus/: prometheus.yml
backend/migrations/: env.py
backend/migrations/versions/: 0be96f55f50c_user_id_index_autoincrement.py  3014acf6cb0a_init.py  a7b1a867ada3_update_account_index.py  a9857021bfe4_init.py  e1051675ac1d_update_book_name.py
db/: 01-init.sh
